Updated index.html to add the favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 <title>Distro Dive</title>
+<link rel="icon" type="image/x-icon" href="Distro Dive Main Logo.png">
 <Style>
 body	{text-align:center;}
 p	{color: white;}
