Updated the website
Updated the website to include the newly announced release date.

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@ a	{color: #00fa70;}
 
 <hr>
 
-<p>stay tuned</p>
-<p style="color:#00fa70;">summer 2024</p>
+<p>something fresh is coming</p>
+<p style="color:#00fa70;">Saturday, July 20th</p>
 
 <a style="text-align:center;" href="https://youtube.com/@distrodive">Youtube</a>
 <a style="text-align:center;" href="https://instagram.com/distrodive">Instagram</a>
