New dive announced | Linux Mint 21.3

--- a/index.html
+++ b/index.html
@@ -9,18 +9,30 @@ p	{color: white;}
 a	{color: #00fa70;}
 </Style>
 </head>
-<body style="background-color:#8314b0;">
+<body style="background-color:#8511B4;">
 
 <h1 style="color:white;">Distro Dive</h1>
-<h3 style="color:#00fa70;">by papasfilms</h3>
+<h3 style="color:#00FF66;">by papasfilms</h3>
 
 <hr>
 
-<p>something fresh is coming</p>
-<p style="color:#00fa70;">Saturday, July 20th</p>
+<p>Taking dives into a variety of linux distributions (and other unix based OSes!).<br>We install them live on bare metal, test them out, live with them for a few days, livestream with them, edit on them... the whole package! After that, everything is compiled into a single, entertaining *hopefully* video.</p>
+
+<hr>
+<h1 style="color:#00FF66;"> Schedule </h1>
+<h3 style="color:white">Current dive: Linux Mint 21.3</h3>
+
+<p> Wednesday, July 3rd<br>Live preparation / installation <b>[Vault]</b></p>
+
+<p> Wednesday, July 10th<br>Live gaming! <b>[Vault]</b></p>
+
+<p style="color:#00FF66;"> Saturday, July 20th<br>Main video</p>
+
+<p>The stream highlights video will be uploaded after the livestream and before the release of the main video.</p>
 
 <a style="text-align:center;" href="https://youtube.com/@distrodive">Youtube</a>
 <a style="text-align:center;" href="https://instagram.com/distrodive">Instagram</a>
+<a style="text-align:center;" href="https://youtube.com/@distrodivevault">Youtube[Vault]</a>
 
 </body>
 </html>
