Update on the Linux Mint stream highlights video
Updated the website to include the latest update on why the stream highlights video of Distro Dive #001 (Linux Mint 21.3) was cancelled.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,21 @@ a	{color: #00fa70;}
 
 <p style="color:#00FF66;"> Saturday, July 20th<br>Main video</p>
 
-<p>The stream highlights video will be uploaded after the livestream and before the release of the main video.</p>
+<hr>
+
+<p><b><u>Quick update on the steam highlights video:</u></b><br>
+
+<br>
+
+I was editing the stream highlights video today when I realized that OBS completely ignored my audio settings. You can only hear the game audio. My voice is basically non-existent. Either way, I decided to continue editing.
+<br><br>
+The video exported just fine with a file size of ~55GB. I started transcoding it to .m4v when Mint completely crashed and it now won't boot again. Trying the same thing on my Silverblue errors out but without any catastrophic damage.
+<br><br>
+What's for certain is that I have a loooot of stuff to talk about next Saturday. You DON'T want to miss it.
+<br><br>
+See you there!
+<br>
+<b>-Angelos (they/he)</b></p>
 
 <a style="text-align:center;" href="https://youtube.com/@distrodive">Youtube</a>
 <a style="text-align:center;" href="https://instagram.com/distrodive">Instagram</a>
