--- a/index.html
+++ b/index.html
@@ -20,31 +20,31 @@ a	{color: #00fa70;}
 
 <hr>
 <h1 style="color:#00FF66;"> Schedule </h1>
-<h3 style="color:white">Current dive: Linux Mint 21.3</h3>
+<h3 style="color:white">Current dive: null</h3>
 
-<p> Wednesday, July 3rd<br>Live preparation / installation <b>[Vault]</b></p>
+<p> There are no dives happening at the moment. Stay tunned though because another one might be arround the corner!</p>
 
-<p> Wednesday, July 10th<br>Live gaming! <b>[Vault]</b></p>
+<p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 20th of July.</p>
 
-<p style="color:#00FF66;"> Saturday, July 20th<br>Main video</p>
+<br>
 
 <hr>
 
-<p><b><u>Quick update on the steam highlights video:</u></b><br>
+<h1 style="color:#00FF66;"> Latest Dive </h1>
+<h3 style="color:white;">Linux Mint 21.3</h3>
+<p>Click on the thumbnail to watch the video (You will be redirected to <b><u><i>odysee.com</i></u></b>)</p>
+<p>Alternatively, click <a href="https://youtu.be/NTEIcLYCSwk?si=8CEm0L1Yr8PuqPlP">here</a> to watch through YouTube (You will be redirected to <b><u><i>youtube.com</b></u></i>)</p>
+<a href="https://odysee.com/@distrodive/distrodive-001"><image width=640 height=360 src="DD001-Thumbnail.png"></a>
+
 
 <br>
 
-I was editing the stream highlights video today when I realized that OBS completely ignored my audio settings. You can only hear the game audio. My voice is basically non-existent. Either way, I decided to continue editing.
-<br><br>
-The video exported just fine with a file size of ~55GB. I started transcoding it to .m4v when Mint completely crashed and it now won't boot again. Trying the same thing on my Silverblue errors out but without any catastrophic damage.
-<br><br>
-What's for certain is that I have a loooot of stuff to talk about next Saturday. You DON'T want to miss it.
-<br><br>
-See you there!
-<br>
-<b>-Angelos (they/he)</b></p>
+<hr>
+
+<p>Copyright MMXXIV Distro Dive</p>
 
 <a style="text-align:center;" href="https://youtube.com/@distrodive">Youtube</a>
+<a style="text-align:center;" href="https://odysee.com/@distrodive">Odysee</a>
 <a style="text-align:center;" href="https://instagram.com/distrodive">Instagram</a>
 <a style="text-align:center;" href="https://youtube.com/@distrodivevault">Youtube[Vault]</a>
 
