--- a/index.html
+++ b/index.html
@@ -20,11 +20,16 @@ a	{color: #00fa70;}
 
 <hr>
 <h1 style="color:#00FF66;"> Schedule </h1>
-<h3 style="color:white">Current dive: null</h3>
+<!-- <h3 style="color:white">Current dive: null</h3> -->
+<h3 style="color:white">Latest announcement:</h3>
 
-<p> There are no dives happening at the moment. Stay tunned though because another one might be arround the corner!</p>
+<!-- <p> There are no dives happening at the moment. Stay tunned though because another one might be arround the corner!</p>
 
-<p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 20th of July.</p>
+<p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 20th of July.</p> -->
+
+<image width=500 height=500 src="dd002 teaser.png">
+
+<br>
 
 <br>
 
