Change of plans for dd002
Removed the old teaser of dd002 (Alpine Linux) and replaced it with the new one (Ubuntu). Also added an explenation of the change.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,13 @@ a	{color: #00fa70;}
 
 <p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 20th of July.</p> -->
 
-<image width=500 height=500 src="dd002 teaser.png">
+<image width=500 height=500 src="dd002 teaser ubuntu.png">
+
+<br>
+
+<p>Due to the fact that Alpine Linux has trouble with Nvidia GPUs (as it doesn't work no matter how hard I tried)<br><br>we'll take a dive at the 20th anniversary edition of Ubuntu:<br><br><b>Ubuntu 24.04 LTS Noble Numbat</b> for Distro Dive #002</p>
+
+<p>Schedule TBA soon!</p>
 
 <br>
 
