New dive announced | Ubuntu Noble Numbat
Removed the teaser of Distro Dive #002 and replaced it with the schedule.

--- a/index.html
+++ b/index.html
@@ -20,22 +20,23 @@ a	{color: #00fa70;}
 
 <hr>
 <h1 style="color:#00FF66;"> Schedule </h1>
-<!-- <h3 style="color:white">Current dive: null</h3> -->
-<h3 style="color:white">Latest announcement:</h3>
+<h3 style="color:white">Current dive: Ubuntu Noble Numbat</h3>
+<!-- <h3 style="color:white">Latest announcement:</h3> --!>
 
 <!-- <p> There are no dives happening at the moment. Stay tunned though because another one might be arround the corner!</p>
 
 <p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 20th of July.</p> -->
 
-<image width=500 height=500 src="dd002 teaser ubuntu.png">
+<p>Wednesday, September 18th<br>Live gaming! <b>[Vault]</b></p>
+
+<p style="color:#00FF66;"> Saturday, September 28th<br>Main video</p>
+
+<!-- <image width=500 height=500 src="dd002 teaser ubuntu.png"> --!>
 
 <br>
 
-<p>Due to the fact that Alpine Linux has trouble with Nvidia GPUs (as it doesn't work no matter how hard I tried)<br><br>we'll take a dive at the 20th anniversary edition of Ubuntu:<br><br><b>Ubuntu 24.04 LTS Noble Numbat</b> for Distro Dive #002</p>
-
-<p>Schedule TBA soon!</p>
-
-<br>
+<p>The preparation / installation will not be streamed due to time constraints.</p>
+<p>The stream highlights video will be uploaded after the livestream and before the release of the main video.</p>
 
 <br>
 
