--- a/index.html
+++ b/index.html
@@ -20,33 +20,33 @@ a	{color: #00fa70;}
 
 <hr>
 <h1 style="color:#00FF66;"> Schedule </h1>
-<h3 style="color:white">Current dive: Ubuntu Noble Numbat</h3>
-<!-- <h3 style="color:white">Latest announcement:</h3> --!>
+<h3 style="color:white">Current dive: null</h3>
+<h3 style="color:white">Latest announcement:</h3>
 
-<!-- <p> There are no dives happening at the moment. Stay tunned though because another one might be arround the corner!</p>
+<p> There are no dives happening at the moment. Stay tunned though because another one might be arround the corner!</p>
 
-<p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 20th of July.</p> -->
+<p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 28th of September.</p>
 
-<p>Wednesday, September 18th<br>Live gaming! <b>[Vault]</b></p>
+<!-- <p>Wednesday, September 18th<br>Live gaming! <b>[Vault]</b></p> --!>
 
-<p style="color:#00FF66;"> Saturday, September 28th<br>Main video</p>
+<!-- <p style="color:#00FF66;"> Saturday, September 28th<br>Main video</p> --!>
 
 <!-- <image width=500 height=500 src="dd002 teaser ubuntu.png"> --!>
 
 <br>
 
-<p>The preparation / installation will not be streamed due to time constraints.</p>
-<p>The stream highlights video will be uploaded after the livestream and before the release of the main video.</p>
+<!-- <p>The preparation / installation will not be streamed due to time constraints.</p> --!>
+<!-- <p>The stream highlights video will be uploaded after the livestream and before the release of the main video.</p> --!>
 
 <br>
 
 <hr>
 
 <h1 style="color:#00FF66;"> Latest Dive </h1>
-<h3 style="color:white;">Linux Mint 21.3</h3>
+<h3 style="color:white;">Ubuntu Noble Numbat (24.04 LTS)</h3>
 <p>Click on the thumbnail to watch the video (You will be redirected to <b><u><i>odysee.com</i></u></b>)</p>
-<p>Alternatively, click <a href="https://youtu.be/NTEIcLYCSwk?si=8CEm0L1Yr8PuqPlP">here</a> to watch through YouTube (You will be redirected to <b><u><i>youtube.com</b></u></i>)</p>
-<a href="https://odysee.com/@distrodive/distrodive-001"><image width=640 height=360 src="DD001-Thumbnail.png"></a>
+<p>Alternatively, click <a href="https://www.youtube.com/watch?v=g5CVeOPbfOo">here</a> to watch through YouTube (You will be redirected to <b><u><i>youtube.com</b></u></i>)</p>
+<a href="https://odysee.com/@distrodive/distrodive-002"><image width=640 height=360 src="DD002-Thumbnail.png"></a>
 
 
 <br>
