Distro Dive #003 teaser added
Changed the website to include the latest teaser of Distro Dive #003.

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@ a	{color: #00fa70;}
 <h3 style="color:white">Current dive: null</h3>
 <h3 style="color:white">Latest announcement:</h3>
 
-<p> There are no dives happening at the moment. Stay tunned though because another one might be arround the corner!</p>
+<!-- <p> There are no dives happening at the moment. Stay tunned though because another one might be arround the corner!</p>
 
-<p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 28th of September.</p>
+<p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 28th of September.</p> --!>
 
 <!-- <p>Wednesday, September 18th<br>Live gaming! <b>[Vault]</b></p> --!>
 
 <!-- <p style="color:#00FF66;"> Saturday, September 28th<br>Main video</p> --!>
 
-<!-- <image width=500 height=500 src="dd002 teaser ubuntu.png"> --!>
+<image width=500 height=500 src="dd003 teaser.png">
 
 <br>
 
