Update copyright date
Updated copyright date from 2024 to 2025.

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ a	{color: #00fa70;}
 
 <hr>
 
-<p>Copyright MMXXIV Distro Dive</p>
+<p>Copyright MMXXV Distro Dive</p>
 
 <a style="text-align:center;" href="https://youtube.com/@distrodive">Youtube</a>
 <a style="text-align:center;" href="https://odysee.com/@distrodive">Odysee</a>
