--- a/index.html
+++ b/index.html
@@ -20,23 +20,23 @@ a	{color: #00fa70;}
 
 <hr>
 <h1 style="color:#00FF66;"> Schedule </h1>
-<h3 style="color:white">Current dive: null</h3>
+<h3 style="color:white">Current dive: elementaryOS 8.0.1 "Circe"</h3>
 <h3 style="color:white">Latest announcement:</h3>
 
 <!-- <p> There are no dives happening at the moment. Stay tunned though because another one might be arround the corner!</p>
 
 <p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 28th of September.</p> --!>
 
-<!-- <p>Wednesday, September 18th<br>Live gaming! <b>[Vault]</b></p> --!>
+<p>Wednesday, July 16th<br>Live gaming! <b>[Vault]</b></p>
 
-<!-- <p style="color:#00FF66;"> Saturday, September 28th<br>Main video</p> --!>
+<p style="color:#00FF66;"> Saturday, July 26th<br>Main video</p>
 
-<image width=500 height=500 src="dd003 teaser.png">
+<!-- <image width=500 height=500 src="dd003 teaser.png"> --!>
 
 <br>
 
-<!-- <p>The preparation / installation will not be streamed due to time constraints.</p> --!>
-<!-- <p>The stream highlights video will be uploaded after the livestream and before the release of the main video.</p> --!>
+<p>The preparation / installation will not be streamed due to time constraints.</p>
+<p>The stream highlights video will be uploaded after the livestream and before the release of the main video.</p>
 
 <br>
 
