Distro Dive #003 released
Following the premier of Distro Dive #003, the website has been updated accordingly.

--- a/index.html
+++ b/index.html
@@ -20,33 +20,33 @@ a	{color: #00fa70;}
 
 <hr>
 <h1 style="color:#00FF66;"> Schedule </h1>
-<h3 style="color:white">Current dive: elementaryOS 8.0.1 "Circe"</h3>
+<h3 style="color:white">Current dive: null</h3>
 <h3 style="color:white">Latest announcement:</h3>
 
-<!-- <p> There are no dives happening at the moment. Stay tunned though because another one might be arround the corner!</p>
+<p> There are no dives happening at the moment. Stay tunned though because another one might be arround the corner!</p>
 
-<p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 28th of September.</p> --!>
+<p>Untill then, be sure to watch the previous one (link bellow) which was premiered on the 26th of July.</p>
 
-<p>Wednesday, July 16th<br>Live gaming! <b>[Vault]</b></p>
+<!-- <p>Wednesday, July 16th<br>Live gaming! <b>[Vault]</b></p> --!>
 
-<p style="color:#00FF66;"> Saturday, July 26th<br>Main video</p>
+<!-- <p style="color:#00FF66;"> Saturday, July 26th<br>Main video</p> --!>
 
 <!-- <image width=500 height=500 src="dd003 teaser.png"> --!>
 
 <br>
 
-<p>The preparation / installation will not be streamed due to time constraints.</p>
-<p>The stream highlights video will be uploaded after the livestream and before the release of the main video.</p>
+<!-- <p>The preparation / installation will not be streamed due to time constraints.</p>
+<p>The stream highlights video will be uploaded after the livestream and before the release of the main video.</p> --!>
 
 <br>
 
 <hr>
 
 <h1 style="color:#00FF66;"> Latest Dive </h1>
-<h3 style="color:white;">Ubuntu Noble Numbat (24.04 LTS)</h3>
+<h3 style="color:white;">elementaryOS 8.0.1 "Circe"</h3>
 <p>Click on the thumbnail to watch the video (You will be redirected to <b><u><i>odysee.com</i></u></b>)</p>
-<p>Alternatively, click <a href="https://www.youtube.com/watch?v=g5CVeOPbfOo">here</a> to watch through YouTube (You will be redirected to <b><u><i>youtube.com</b></u></i>)</p>
-<a href="https://odysee.com/@distrodive/distrodive-002"><image width=640 height=360 src="DD002-Thumbnail.png"></a>
+<p>Alternatively, click <a href="https://www.youtube.com/watch?v=hbKtyfowjiM">here</a> to watch through YouTube (You will be redirected to <b><u><i>youtube.com</b></u></i>)</p>
+<a href="https://odysee.com/@distrodive/distrodive-003"><image width=640 height=360 src="DD003-Thumbnail.png"></a>
 
 
 <br>
